💄 Fixed dark mode's main styles

--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -40,7 +40,7 @@ body.body--light {
 }
 
 body.body--dark {
-  background-color: #3B3B3B;
+  background-color: #262626;
 }
 
 
