--- a/src/css/quasar.variables.scss
+++ b/src/css/quasar.variables.scss
@@ -12,12 +12,11 @@
 // to match your app's branding.
 // Tip: Use the "Theme Builder" on Quasar's documentation website.
 
+$red: #FF3434;
+
 $primary   : #7CBB00;
 $secondary : #26A69A;
 $accent    : #9C27B0;
-
-$dark      : #1D1D1D;
-$dark-page : #121212;
 
 $positive  : #21BA45;
 $negative  : #C10015;
